--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-netavark = "1.15.2"
 netlink-packet-route = "0.22.0"
-ipnet = "2.11.0"
+netlink-sys = "0.8.7"
+netlink-packet-core = "0.7.0"
+serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0"
