--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2024"
 netlink-packet-route = "0.22.0"
 netlink-sys = "0.8.7"
 netlink-packet-core = "0.7.0"
+netlink-packet-netfilter = "0.2.0"
+nix = { version = "0.30.1", features = ["sched"]}
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
